--- a/data/horn/nrel_5MW.yaml
+++ b/data/horn/nrel_5MW.yaml
@@ -1,100 +1,179 @@
-turbine_type: vestas_v80-2.0MW
-hub_height: 70.0
-rotor_diameter: 80.0
-TSR: 5.3058
+turbine_type: nrel_5MW
+hub_height: 90.0
+rotor_diameter: 125.88
+TSR: 8.0
 operation_model: cosine-loss
 power_thrust_table:
   ref_air_density: 1.225
-  ref_tilt: 0.0
+  ref_tilt: 5.0
   cosine_loss_exponent_yaw: 1.88
   cosine_loss_exponent_tilt: 1.88
   wind_speed:
-  - 0.0
-  - 1.0
-  - 2.0
-  - 3.0
-  - 3.9
-  - 4
-  - 5
-  - 6
-  - 7
-  - 8
-  - 9
-  - 10
-  - 11
-  - 12
-  - 13
-  - 14
-  - 15
-  - 16
-  - 17
-  - 18
-  - 19
-  - 20
-  - 21
-  - 22
-  - 23
-  - 24
-  - 25.0
-  - 25.01
-  - 50.0
+    - 0.0
+    - 2.9
+    - 3.0
+    - 4.0
+    - 5.0
+    - 6.0
+    - 7.0
+    - 7.1
+    - 7.2
+    - 7.3
+    - 7.4
+    - 7.5
+    - 7.6
+    - 7.7
+    - 7.8
+    - 7.9
+    - 8.0
+    - 9.0
+    - 10.0
+    - 10.1
+    - 10.2
+    - 10.3
+    - 10.4
+    - 10.5
+    - 10.6
+    - 10.7
+    - 10.8
+    - 10.9
+    - 11.0
+    - 11.1
+    - 11.2
+    - 11.3
+    - 11.4
+    - 11.5
+    - 11.6
+    - 11.7
+    - 11.8
+    - 11.9
+    - 12.0
+    - 13.0
+    - 14.0
+    - 15.0
+    - 16.0
+    - 17.0
+    - 18.0
+    - 19.0
+    - 20.0
+    - 21.0
+    - 22.0
+    - 23.0
+    - 24.0
+    - 25.0
+    - 25.1
+    - 50.0
+  ###
+  # Power values (specified in kW) for lookup by wind speed. List of float type.
   power:
-  - 0.0
-  - 0.0
-  - 0.0
-  - 0.0
-  - 0.0
-  - 66.6
-  - 154.0
-  - 282.0
-  - 460.0
-  - 696.0
-  - 996.0
-  - 1341.0
-  - 1661.0
-  - 1866.0
-  - 1958.0
-  - 1988.0
-  - 1997.0
-  - 1999.0
-  - 2000.0
-  - 2000.0
-  - 2000.0
-  - 2000.0
-  - 2000.0
-  - 2000.0
-  - 2000.0
-  - 2000.0
-  - 2000.0
-  - 0.0
-  - 0.0
+    - 0.0
+    - 0.0
+    - 40.518011517569214
+    - 177.67162506419703
+    - 403.900880943964
+    - 737.5889584824021
+    - 1187.1774030611875
+    - 1239.245945375778
+    - 1292.5184293723503
+    - 1347.3213147477102
+    - 1403.2573725578948
+    - 1460.7011898730707
+    - 1519.6419125979983
+    - 1580.174365096404
+    - 1642.1103166918167
+    - 1705.758292831
+    - 1771.1659528893977
+    - 2518.553107505315
+    - 3448.381605840943
+    - 3552.140809000129
+    - 3657.9545431794127
+    - 3765.121299313842
+    - 3873.928844315059
+    - 3984.4800226955504
+    - 4096.582833096852
+    - 4210.721306623712
+    - 4326.154305853405
+    - 4443.395565353604
+    - 4562.497934188341
+    - 4683.419890251577
+    - 4806.164748311019
+    - 4929.931918769215
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 5000.00
+    - 0.0
+    - 0.0
+  ###
+  # Thrust coefficient values (unitless) for lookup by wind speed. List of float type.
   thrust_coefficient:
-  - 0.0
-  - 0.0
-  - 0.0
-  - 0.0
-  - 0.0  
-  - 0.818
-  - 0.806
-  - 0.804
-  - 0.805
-  - 0.806
-  - 0.807
-  - 0.793
-  - 0.739
-  - 0.709
-  - 0.409
-  - 0.314
-  - 0.249
-  - 0.202
-  - 0.167
-  - 0.14
-  - 0.119
-  - 0.102
-  - 0.088
-  - 0.077
-  - 0.067
-  - 0.06
-  - 0.053
-  - 0.0
-  - 0.0
+    - 0.0
+    - 0.0
+    - 1.132034888
+    - 0.999470963
+    - 0.917697381
+    - 0.860849503
+    - 0.815371198
+    - 0.811614904
+    - 0.807939328
+    - 0.80443352
+    - 0.800993851
+    - 0.79768116
+    - 0.794529244
+    - 0.791495834
+    - 0.788560434
+    - 0.787217182
+    - 0.787127977
+    - 0.785839257
+    - 0.783812219
+    - 0.783568108
+    - 0.783328285
+    - 0.781194418
+    - 0.777292539
+    - 0.773464375
+    - 0.769690236
+    - 0.766001924
+    - 0.762348072
+    - 0.758760824
+    - 0.755242872
+    - 0.751792927
+    - 0.748434131
+    - 0.745113997
+    - 0.717806682
+    - 0.672204789
+    - 0.63831272
+    - 0.610176496
+    - 0.585456847
+    - 0.563222111
+    - 0.542912273
+    - 0.399312061
+    - 0.310517829
+    - 0.248633226
+    - 0.203543725
+    - 0.169616419
+    - 0.143478955
+    - 0.122938861
+    - 0.106515296
+    - 0.093026095
+    - 0.081648606
+    - 0.072197368
+    - 0.064388275
+    - 0.057782745
+    - 0.0
+    - 0.0
