--- a/data/horn/gauss_hornsRev.yaml
+++ b/data/horn/gauss_hornsRev.yaml
@@ -1,5 +1,5 @@
 name: CC
-description: Horns Rev 1 using Cumulative Gauss Curl model
+description: Horns Rev 1 using Gauss-Curl Hybrid model
 floris_version: v3.0.0
 
 logging:
